@@ -397,23 +397,6 @@ Job execution context
     steps. Rarely needed. If not set, we use ``sys.executable`` (the current
     Python interpreter).
 
-.. mrjob-opt::
-    :config: strict_protocols
-    :switch: --strict-protocols, --no-strict-protocols
-    :type: boolean
-    :set: all
-    :default: ``True``
-
-    If you set this to false, when jobs encounter unencodable input or output,
-    they'll increment a counter rather than simply raising an exception.
-
-    .. warning::
-
-       Non-strict protocols are going away in v0.6.0. There is no limit on
-       how much data on-strict protocols can silently swallow (potentially
-       *all* of it). If you have a problem caused by character encoding in
-       log files, consider using
-       :py:class:`~mrjob.protocol.TextValueProtocol` instead.
 
 Other
 =====
