@@ -1010,21 +1010,6 @@ _RUNNER_OPTS = dict(
             )),
         ],
     ),
-    strict_protocols=dict(
-        deprecated=True,
-        switches=[
-            (['--strict-protocols'], dict(
-                action='store_true',
-                help=('If something violates an input/output '
-                      'protocol then raise an exception (the default)'),
-            )),
-            (['--no-strict-protocols'], dict(
-                action='store_false',
-                help=('If something violates an input/output '
-                      'protocol then increment a counter and continue'),
-            )),
-        ],
-    ),
     subnet=dict(
         cloud_role='launch',
         runners=['emr'],
